# textdancer

./: .gitignore  Cursor.py  README.md  TextChunk.py  setup.cfg
textdancer/: TextChunk.py
