[metadata]
name = textdancer
version = 0.0.2
url = https://github.com/Hajime-Saitou/textdancer
author = Hajime Saito
author_email = g.hajime.saitou@gmail.com
license = MIT License
license_file = LICENSE
description = Text manipulator
long_description = file: README.md
long_description_content_type = text/markdown
keywords = python, text
classifiers =
    Development Status :: 5 - Production/Stable
    License :: OSI Approved :: MIT License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Topic :: Software Development :: Libraries :: Python Modules
project_urls =
    Source = https://github.com/Hajime-Saitou/textdancer

[options]
python_requires = >=3.7
packages = find:
include_package_data = false
zip_safe = false
setup_requires =
    setuptools_scm

[options.extras_require]
